[package]
name = "proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = {version = "0.8.0-beta.5",features=["vendored","luau","send","async","serialize"]}
directories = "4.0.1"
log = "0.4.17"
lazy_static = "1.4.0"
clap = {version = "3.1.18",features=["derive"]}
path-absolutize = "3"
tokio = {version = "1.19.2",features=["full"]}
reqwest = "0.11.10"
serde = {version = "1.0",features=["derive"]}


